--- a/asset/home.css
+++ b/asset/home.css
@@ -5,6 +5,19 @@
    License: none (public domain)
 */
 
+:root {
+  --Background: #08151f;
+  --Accent: #f2192a;
+  --Text: #fff;
+  --Text-Sec: #727e8b;
+
+  --secondary: #111e2a;
+  --background-pop: #19232d;
+
+  --gradeient-dark: #2a0000;
+  --gradient-light: #731010;
+}
+
 html,
 body,
 div,
@@ -76,7 +89,6 @@ figcaption,
 header,
 hgroup,
 menu,
-
 output,
 ruby,
 section,
@@ -101,7 +113,6 @@ figure,
 header,
 hgroup,
 menu,
-
 section {
   display: block;
   margin-bottom: 10rem !important;
@@ -180,6 +191,7 @@ input[type="reset"] {
   margin-top: 10vh;
   padding: 2.5rem;
   padding-right: 1rem;
+
 }
 
 .heroSection__heroContent__heroText {
@@ -283,9 +295,6 @@ input[type="reset"] {
   box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
   top: -4px;
   box-shadow: 0px 12px 6px #000000;
-}
-
-.copyrightTypesSection__licenceTypesContainer__licenceCard__imageSection {
 }
 
 .copyrightTypesSection__licenceTypesContainer__licenceCard__content {
@@ -516,8 +525,11 @@ input[type="reset"] {
 .artistGallerySection .contentSection {
   min-width: 40%;
   padding: 3rem;
-  margin-top: 15rem;
+  margin-top: 8rem;
   background-color: #0f1923;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .artistGallerySection .contentSection h1 {
@@ -544,23 +556,25 @@ input[type="reset"] {
 }
 
 .artistGallerySection .contentSection .primary_CTA {
-  margin-top: 4rem;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 29px;
   line-height: 48px;
   width: 100%;
   background-color: #ed1c24;
   color: white;
+  margin: 2rem 0;
+  padding: 0.5rem;
 }
 
 .artistGallerySection .contentSection .secondary_CTA {
-  margin-top: 2rem;
+
   font-weight: bold;
-  font-size: 24px;
+  font-size: 29px;
   line-height: 48px;
   width: 100%;
   background-color: #727e8b;
   color: white;
+  padding: 0.5rem;
 }
 
 .affliateSection {
@@ -576,6 +590,8 @@ input[type="reset"] {
 
 .affliateSection .contentSection {
   min-width: 20%;
+  display: flex;
+  flex-direction: column;
 }
 
 .affliateSection .contentSection h1 {
@@ -597,19 +613,43 @@ input[type="reset"] {
   color: #727e8b;
 }
 
-.affliateSection .contentSection .primary_CTA {
-  margin-top: 1rem;
+.affliateSection .contentSection  .primary_CTA {
   font-weight: bold;
-  font-size: 24px;
+  font-size: 29px;
   line-height: 48px;
   width: 100%;
   background-color: #ed1c24;
   color: white;
+  margin: 2rem 0;
+  padding: 0.5rem;
 }
 
 .affliateSection .imageSection {
   min-width: 50%;
-padding-left: 5rem;
+  padding-left: 0rem;
+}
+
+#last__card {
+  display: none;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  width: 10px;
+  background: #212529;
+  border-left: 0 solid white;
+  border-right: 0 solid white;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--Accent);
+  width: 0;
+  height: 35%;
+  transition: 0.5s ease;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1200px) {
@@ -624,16 +664,128 @@ padding-left: 5rem;
   }
   .heroSection__heroContent {
     background-color: rgba(0, 0, 0, 0.7);
-    height: 50vh;
+    height: 80vh;
     margin-right: 3rem;
+    margin-left: 3rem;
+    min-height: 65vh;
+    text-align: center;
+  }
+
+  .heroSection_heroContent_description {
+    max-width: fit-content;
+  }
+
+  .copyrightTypesSection__licenceTypesContainer {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-auto-rows: 1fr;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .copyrightTypesSection_licenceTypesContainer_licenceCard {
+    height: 100%;
+  }
+  .copyrightTypesSection_licenceTypesContainerlicenceCard_content {
+    height: 100%;
+  }
+  .copyrightTypesSection_licenceTypesContainerlicenceCard_content_button {
+    align-self: flex-end;
+  }
+
+  .copyrightTypesSection__title {
+    line-height: 110%;
+  }
+
+  .copyrightTypesSection_licenceTypesContainer_licenceCard {
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .copyrightTypesSection_licenceTypesContainerlicenceCard_content_title {
+    line-height: 110%;
+  }
+
+  .copyrightViolationSection_section_stats {
+    display: none;
+  }
+
+  .copyrightViolationSection_content {
+    text-align: center;
+    margin-right: 0px;
+  }
+  .copyrightViolationSection_content_subheading {
+    text-align: center;
+  }
+
+  #last__card {
+    display: none;
+  }
+
+  .artistGallerySection {
+    flex-direction: column;
+  }
+
+  .artistGallerySection {
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+  .artistGallerySection .imageSection {
+    display: flex;
+    background-image: url("../images/index-assets/artist_showcase_2.png");
+    width: 100%;
+    height: 80vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+  }
+
+  .artistGallerySection .contentSection {
+    margin-top: 0px;
+  }
+  .artistGallerySection .imageSection img {
+    display: none;
+  }
+  .artistGallerySection .contentSection h1 {
+    text-align: center;
+  }
+
+  .artistGallerySection .contentSection p {
+    text-align: center;
+  }
+
+  .affliateSection {
+    flex-direction: column;
+    padding: 2rem;
+    margin-top: 0px;
+  }
+
+  .affliateSection .contentSection {
+    padding: 3rem;
+    text-align: center;
+    margin-top: 0px;
+  }
+
+  .affliateSection .imageSection {
+    margin-left: 9rem;
   }
 }
 
 @media screen and (max-width: 768px) {
   /* style changes when the screen gets smaller */
 
+  section {
+    margin-bottom: 5rem !important;
+  }
+
   .container {
     padding: 0;
+  }
+
+  #last__card {
+    margin-top: 1rem;
+    display: contents;
   }
 
   .heroSection {
@@ -648,11 +800,10 @@ padding-left: 5rem;
 
   .heroSection__heroContent {
     margin-top: 11vh;
-  }
-
-  .heroSection__heroContent {
     margin-right: 0;
     padding: 1rem;
+    margin-left: 0;
+    height: 80vh;
   }
 
   .heroSection__heroContent__heroText {
@@ -720,6 +871,7 @@ padding-left: 5rem;
     display: flex;
     flex-direction: column;
     gap: 0rem;
+    align-items: flex-start;
   }
 
   .copyrightTypesSection__licenceTypesContainer__licenceCard:last-child {
@@ -734,6 +886,16 @@ padding-left: 5rem;
     margin: 1rem 0;
 
     border-left: 10px solid #ed1c24;
+  }
+
+  .copyrightTypesSection__licenceTypesContainer__licenceCard:last-child {
+    display: flex;
+    align-items: center;
+    max-width: 100vw;
+    padding: 0;
+    margin: 1rem 0;
+
+    border-left: none;
   }
 
   .copyrightTypesSection__licenceTypesContainer__licenceCard:hover {
@@ -754,6 +916,14 @@ padding-left: 5rem;
 
   .copyrightTypesSection__licenceTypesContainer__licenceCard__content_button {
     display: none;
+  }
+
+  #last__button {
+    text-align: center;
+    display: block;
+    padding: 0;
+    width: 80vw;
+    margin: 0 auto;
   }
 
   .copyrightTypesSection__licenceTypesContainer__licenceCard__content_description {
@@ -829,6 +999,10 @@ padding-left: 5rem;
     text-align: center;
   }
 
+  .copyrightViolationSection_content_button {
+    font-size: 16px;
+  }
+
   .copyrightViolationSection_section_stats__image {
     display: none;
   }
@@ -871,17 +1045,32 @@ padding-left: 5rem;
     display: none;
   }
 
+  .copyrightViolationSection_section_stats__artistbox,
+  .copyrightViolationSection_section_stats__songbox {
+    margin-top: 1rem;
+    padding: 1rem;
+    text-align: left;
+  }
+
   .copyrightViolationSection_section_stats__artistbox h1 {
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 24px;
     line-height: 20px;
+  }
+
+  #stat__highlight {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 32px;
+    color: #ed1c24;
   }
 
   .copyrightViolationSection_section_stats__songbox h1 {
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 24px;
     line-height: 20px;
   }
 
@@ -896,12 +1085,13 @@ padding-left: 5rem;
     display: flex;
     max-width: 1600px;
     margin: 0 auto;
+    flex-direction: row;
   }
 
   .artistGallerySection .imageSection {
     min-width: 50%;
-    height: 25vh;
     width: 50%;
+    background-size: cover;
   }
 
   .artistGallerySection .imageSection img {
@@ -914,6 +1104,9 @@ padding-left: 5rem;
     padding: 0rem;
     margin: 0rem;
     background-color: #0f1923;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .artistGallerySection .contentSection h1 {
@@ -933,15 +1126,16 @@ padding-left: 5rem;
   }
 
   .artistGallerySection .contentSection .primary_CTA {
-    margin-top: 4rem;
-
+    margin-top: 3rem;
     background-color: #ed1c24;
     color: white;
     font-style: normal;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 14px;
-    line-height: 48px;
+    line-height: 18px;
+    padding: 0.5rem;
     text-align: center;
+    width: 90%;
   }
 
   .contentSection {
@@ -949,15 +1143,20 @@ padding-left: 5rem;
   }
 
   .artistGallerySection .contentSection .secondary_CTA {
-    margin-top: 2rem;
-
     background-color: #727e8b;
     color: white;
     font-style: normal;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 14px;
-    line-height: 48px;
+    line-height: 18px;
+    padding: 0.5rem;
     text-align: center;
+    width: 90%;
+  }
+
+  .affliateSection .imageSection {
+    min-width: 50%;
+    margin-left: 0rem;
   }
 
   /*-------------------------Alliliate------------------*/
@@ -978,6 +1177,7 @@ padding-left: 5rem;
   .affliateSection .contentSection {
     width: 100%;
     margin-top: 3rem;
+    padding: 0;
   }
 
   .affliateSection .contentSection h1 {
@@ -1009,6 +1209,7 @@ padding-left: 5rem;
 
   .affliateSection .imageSection {
     margin: 5rem 0 0 0;
+    padding: 0;
   }
 
   .affliateSection .imageSection img {
